--- a/ParaMeds/Views/Cells/Adult Cells/AdultViewCell.xib
+++ b/ParaMeds/Views/Cells/Adult Cells/AdultViewCell.xib
@@ -12,43 +12,100 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AdultViewCell" customModule="ParaMeds" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="256"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="332" id="KGk-i7-Jjw" customClass="AdultViewCell" customModule="ParaMeds" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="331"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="255.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="330.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHk-Ly-2Tf">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="256"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="330.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTa-n6-clA">
-                                <rect key="frame" x="8" y="8" width="304" height="240"/>
-                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="42"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U8t-Qc-Iyk">
+                                <rect key="frame" x="8" y="8" width="304" height="314.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Initial Dose" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ZG-4x-fy2">
+                                        <rect key="frame" x="0.0" y="36" width="304" height="33"/>
+                                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="26"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second/Max Dose" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shR-85-y1z">
+                                        <rect key="frame" x="0.0" y="175" width="304" height="33"/>
+                                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="26"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ALX-yS-5H1">
+                                        <rect key="frame" x="4" y="74" width="296" height="96"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRG-p7-Zwq">
+                                        <rect key="frame" x="4" y="213" width="296" height="96"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IV / IO" textAlignment="right" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTa-n6-clA">
+                                        <rect key="frame" x="0.0" y="0.0" width="304" height="36"/>
+                                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="30"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="jRG-p7-Zwq" secondAttribute="trailing" constant="4" id="0fe-mh-Xin"/>
+                                    <constraint firstItem="shR-85-y1z" firstAttribute="top" secondItem="U8t-Qc-Iyk" secondAttribute="top" constant="175" id="5UW-uw-bq8"/>
+                                    <constraint firstAttribute="bottom" secondItem="4ZG-4x-fy2" secondAttribute="bottom" constant="245.5" id="9PP-Gw-EGC"/>
+                                    <constraint firstAttribute="trailing" secondItem="fTa-n6-clA" secondAttribute="trailing" id="Bft-zF-Qkz"/>
+                                    <constraint firstAttribute="bottom" secondItem="fTa-n6-clA" secondAttribute="bottom" constant="278.5" id="Dmo-gC-UtV"/>
+                                    <constraint firstAttribute="bottom" secondItem="jRG-p7-Zwq" secondAttribute="bottom" constant="5.5" id="G7P-J9-n6D"/>
+                                    <constraint firstItem="4ZG-4x-fy2" firstAttribute="leading" secondItem="U8t-Qc-Iyk" secondAttribute="leading" id="ImU-Nh-bsc"/>
+                                    <constraint firstItem="ALX-yS-5H1" firstAttribute="top" secondItem="U8t-Qc-Iyk" secondAttribute="top" constant="74" id="Opc-m0-VYy"/>
+                                    <constraint firstAttribute="trailing" secondItem="ALX-yS-5H1" secondAttribute="trailing" constant="4" id="Tb5-dY-QZA"/>
+                                    <constraint firstItem="fTa-n6-clA" firstAttribute="leading" secondItem="U8t-Qc-Iyk" secondAttribute="leading" id="eiZ-7C-ZvH"/>
+                                    <constraint firstAttribute="bottom" secondItem="shR-85-y1z" secondAttribute="bottom" constant="106.5" id="fa7-fo-ZIr"/>
+                                    <constraint firstAttribute="bottom" secondItem="ALX-yS-5H1" secondAttribute="bottom" constant="144.5" id="g9i-tu-9XQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="4ZG-4x-fy2" secondAttribute="trailing" id="inS-gy-U9L"/>
+                                    <constraint firstItem="jRG-p7-Zwq" firstAttribute="leading" secondItem="U8t-Qc-Iyk" secondAttribute="leading" constant="4" id="iuM-La-CG4"/>
+                                    <constraint firstItem="fTa-n6-clA" firstAttribute="top" secondItem="U8t-Qc-Iyk" secondAttribute="top" id="lDK-Xb-ZFd"/>
+                                    <constraint firstItem="ALX-yS-5H1" firstAttribute="leading" secondItem="U8t-Qc-Iyk" secondAttribute="leading" constant="4" id="lE9-RZ-Kwz"/>
+                                    <constraint firstItem="jRG-p7-Zwq" firstAttribute="top" secondItem="U8t-Qc-Iyk" secondAttribute="top" constant="213" id="qdt-S2-YjD"/>
+                                    <constraint firstAttribute="trailing" secondItem="shR-85-y1z" secondAttribute="trailing" id="s3Q-3t-Eb1"/>
+                                    <constraint firstItem="4ZG-4x-fy2" firstAttribute="top" secondItem="U8t-Qc-Iyk" secondAttribute="top" constant="36" id="tbv-Ms-7xK"/>
+                                    <constraint firstItem="shR-85-y1z" firstAttribute="leading" secondItem="U8t-Qc-Iyk" secondAttribute="leading" id="zsh-Mf-jfl"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="fTa-n6-clA" firstAttribute="top" secondItem="OHk-Ly-2Tf" secondAttribute="top" constant="8" id="Esg-kf-45g"/>
-                            <constraint firstAttribute="trailing" secondItem="fTa-n6-clA" secondAttribute="trailing" constant="8" id="eEM-D0-hiW"/>
-                            <constraint firstAttribute="bottom" secondItem="fTa-n6-clA" secondAttribute="bottom" constant="8" id="iUk-Ng-pH3"/>
-                            <constraint firstItem="fTa-n6-clA" firstAttribute="leading" secondItem="OHk-Ly-2Tf" secondAttribute="leading" constant="8" id="xIG-aR-L0f"/>
+                            <constraint firstAttribute="bottom" secondItem="U8t-Qc-Iyk" secondAttribute="bottom" constant="8" id="5Fv-fx-8u2"/>
+                            <constraint firstAttribute="trailing" secondItem="U8t-Qc-Iyk" secondAttribute="trailing" constant="8" id="KQD-t1-Gjx"/>
+                            <constraint firstItem="U8t-Qc-Iyk" firstAttribute="top" secondItem="OHk-Ly-2Tf" secondAttribute="top" constant="8" id="YfA-Tg-Exl"/>
+                            <constraint firstItem="U8t-Qc-Iyk" firstAttribute="leading" secondItem="OHk-Ly-2Tf" secondAttribute="leading" constant="8" id="vyr-2D-LHD"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="OHk-Ly-2Tf" secondAttribute="trailing" id="g4i-wr-bq6"/>
-                    <constraint firstAttribute="bottom" secondItem="OHk-Ly-2Tf" secondAttribute="bottom" id="hpe-eF-jxa"/>
-                    <constraint firstItem="OHk-Ly-2Tf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pjj-KQ-bFM"/>
-                    <constraint firstItem="OHk-Ly-2Tf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uLL-BT-zWp"/>
+                    <constraint firstItem="OHk-Ly-2Tf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="3d2-CV-IZF"/>
+                    <constraint firstAttribute="trailing" secondItem="OHk-Ly-2Tf" secondAttribute="trailing" id="5Zr-Hp-NYX"/>
+                    <constraint firstAttribute="bottom" secondItem="OHk-Ly-2Tf" secondAttribute="bottom" id="7Uk-Zv-RJp"/>
+                    <constraint firstItem="OHk-Ly-2Tf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="8eu-4O-g6F"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="adultbLbl" destination="fTa-n6-clA" id="jDh-xO-0Fp"/>
+                <outlet property="aInitialDose" destination="ALX-yS-5H1" id="rm7-nF-DsV"/>
+                <outlet property="aSecondDose" destination="jRG-p7-Zwq" id="5U2-tk-dRk"/>
+                <outlet property="ainjectionLbl" destination="fTa-n6-clA" id="jDh-xO-0Fp"/>
             </connections>
+            <point key="canvasLocation" x="26" y="90.5"/>
         </tableViewCell>
     </objects>
 </document>
